# mycase-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  README.md  logging_config.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/api/Mycase API Refs/: Calls.json  CaseRoles.json  CaseStages.json  Cases.json  Clients.json  Companies.json  CustomFields.json  Documents.json  Events.json  Expenses.json  Firm.json  Folders.json  InvoicePayments.json  Invoices.json  Leads.json  Locations.json  MessageThreads.json  Mycase-Cursor-based Pagination  Mycase-Error Handling  Mycase-Getting Started  Mycase-Time Zones  Notes.json  PeopleGroups.json  PracticeAreas.json  ReferralSources.json  Staff.json  Tasks.json  TimeEntries.json  Webhooks.json
mycase_mcp/: __init__.py  client.py  credentials.py  server.py
mycase_mcp/setup/: oauth_flow.py  verify.py
tests/: config.py  endpoints.yaml  merge_specs.py  openapi-merged.json
