[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycase-mcp"
version = "0.1.0"
description = "MCP server for MyCase API — full coverage for law firm practice management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mycase", "mcp", "legal", "law", "claude", "practice-management"]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "keyring>=24.0.0",
]

[project.scripts]
mycase-mcp = "mycase_mcp.server:main"
mycase-mcp-setup = "mycase_mcp.setup.oauth_flow:main"
mycase-mcp-verify = "mycase_mcp.setup.verify:main"

[project.urls]
Homepage = "https://github.com/rosenadvertising/mycase-mcp"
Issues = "https://github.com/rosenadvertising/mycase-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["mycase_mcp"]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
